// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TagsInput > and by using the keyboard the user can remove a tag 1`] = `
<DocumentFragment>
  <div
    class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit py-2 overflow-hidden min-h-10 px-4"
  >
    <span
      aria-disabled="false"
      class="badge badge-ghost relative flex items-center gap-1 [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-hidden ring-1 ring-inset opacity-80"
      data-active="true"
      tabindex="0"
    >
      <span
        class="truncate max-w-24"
      >
        World
      </span>
      <button
        aria-label="Remove World option"
        aria-roledescription="button to remove option"
        class="transition-all duration-300 disabled:cursor-not-allowed [&:hover:not(:disabled)]:opacity-80"
        type="button"
      >
        <span
          class="sr-only"
        >
          Remove World option
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </span>
    <input
      aria-label="Enter anything"
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1 caret-transparent"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > and the user can only enter a certain minimum or maximum number of tags 1`] = `
<DocumentFragment>
  <div
    class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit py-2 overflow-hidden min-h-10 px-4"
  >
    <span
      aria-disabled="true"
      class="badge badge-ghost relative flex items-center gap-1 [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-hidden"
      data-active="false"
      tabindex="-1"
    >
      <span
        class="truncate max-w-24"
      >
        World
      </span>
      <button
        aria-label="Remove World option"
        aria-roledescription="button to remove option"
        class="transition-all duration-300 disabled:cursor-not-allowed [&:hover:not(:disabled)]:opacity-80"
        disabled=""
        type="button"
      >
        <span
          class="sr-only"
        >
          Remove World option
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </span>
    <input
      aria-label="Enter anything"
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > and the user can remove a tag 1`] = `
<DocumentFragment>
  <div
    class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit py-2 overflow-hidden min-h-10 px-4"
  >
    <input
      aria-label="Enter anything"
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > and the user enters a tag 1`] = `
<DocumentFragment>
  <div
    class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit py-2 overflow-hidden min-h-10 px-4"
  >
    <span
      aria-disabled="false"
      class="badge badge-ghost relative flex items-center gap-1 [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-hidden"
      data-active="false"
      tabindex="-1"
    >
      <span
        class="truncate max-w-24"
      >
        Hello
      </span>
      <button
        aria-label="Remove Hello option"
        aria-roledescription="button to remove option"
        class="transition-all duration-300 disabled:cursor-not-allowed [&:hover:not(:disabled)]:opacity-80"
        type="button"
      >
        <span
          class="sr-only"
        >
          Remove Hello option
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </span>
    <span
      aria-disabled="false"
      class="badge badge-ghost relative flex items-center gap-1 [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-hidden"
      data-active="false"
      tabindex="-1"
    >
      <span
        class="truncate max-w-24"
      >
        World
      </span>
      <button
        aria-label="Remove World option"
        aria-roledescription="button to remove option"
        class="transition-all duration-300 disabled:cursor-not-allowed [&:hover:not(:disabled)]:opacity-80"
        type="button"
      >
        <span
          class="sr-only"
        >
          Remove World option
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </span>
    <input
      aria-label="Enter anything"
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has accent variant 1`] = `
<DocumentFragment>
  <div
    class="shadow-2xs flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-accent shadow-accent [&:has(input:focus)]:outline-accent [&:has(input:focus-within)]:outline-accent text-sm flex-wrap h-fit py-2 overflow-hidden min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="accent badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has default variant 1`] = `
<DocumentFragment>
  <div
    class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 [&:has(input:focus)]:border-[currentColor] [&:has(input:focus-within)]:border-[currentColor] [&:has(input:focus)]:outline-ghost [&:has(input:focus-within)]:outline-ghost text-sm flex-wrap h-fit py-2 overflow-hidden min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="default badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has error variant 1`] = `
<DocumentFragment>
  <div
    class="shadow-2xs flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-error shadow-error [&:has(input:focus)]:outline-error [&:has(input:focus-within)]:outline-error text-sm flex-wrap h-fit py-2 overflow-hidden min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="error badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has ghost variant 1`] = `
<DocumentFragment>
  <div
    class="border-base-content/20 shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border-0 shadow-none [&:has(input:focus)]:outline-ghost [&:has(input:focus-within)]:outline-ghost text-sm flex-wrap h-fit py-2 overflow-hidden min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="ghost badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has info variant 1`] = `
<DocumentFragment>
  <div
    class="shadow-2xs flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-info shadow-info [&:has(input:focus)]:outline-info [&:has(input:focus-within)]:outline-info text-sm flex-wrap h-fit py-2 overflow-hidden min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="info badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has large (lg) size 1`] = `
<DocumentFragment>
  <div
    class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit py-2 overflow-hidden min-h-16 px-5 text-lg"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1 h-6 text-lg"
      placeholder="TagsInput large"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has medium (md) size 1`] = `
<DocumentFragment>
  <div
    class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit py-2 overflow-hidden min-h-12 px-4 text-sm"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1 h-5 text-sm"
      placeholder="TagsInput medium"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has no outline 1`] = `
<DocumentFragment>
  <div
    class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit py-2 overflow-hidden min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="TagsInput has no outline"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has outline 1`] = `
<DocumentFragment>
  <div
    class="shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border text-sm border-base-content/20 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit py-2 overflow-hidden min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="TagsInput has outline"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has primary variant 1`] = `
<DocumentFragment>
  <div
    class="shadow-2xs flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-primary shadow-primary [&:has(input:focus)]:outline-primary [&:has(input:focus-within)]:outline-primary text-sm flex-wrap h-fit py-2 overflow-hidden min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="primary badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has secondary variant 1`] = `
<DocumentFragment>
  <div
    class="shadow-2xs flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-secondary shadow-secondary [&:has(input:focus)]:outline-secondary [&:has(input:focus-within)]:outline-secondary text-sm flex-wrap h-fit py-2 overflow-hidden min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="secondary badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has small (sm) size 1`] = `
<DocumentFragment>
  <div
    class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit overflow-hidden min-h-8 px-3 py-1.5 text-sm"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1 h-4 text-sm"
      placeholder="TagsInput small"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has success variant 1`] = `
<DocumentFragment>
  <div
    class="shadow-2xs flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-success shadow-success [&:has(input:focus)]:outline-success [&:has(input:focus-within)]:outline-success text-sm flex-wrap h-fit py-2 overflow-hidden min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="success badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has tiny (xs) size 1`] = `
<DocumentFragment>
  <div
    class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit overflow-hidden min-h-6 px-2 py-1 text-xs"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1 h-3 text-xs"
      placeholder="TagsInput tiny"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > has warning variant 1`] = `
<DocumentFragment>
  <div
    class="shadow-2xs flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-warning shadow-warning [&:has(input:focus)]:outline-warning [&:has(input:focus-within)]:outline-warning text-sm flex-wrap h-fit py-2 overflow-hidden min-h-10 px-4"
  >
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="warning badge"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TagsInput > renders some default tags 1`] = `
<DocumentFragment>
  <div
    class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit py-2 overflow-hidden min-h-10 px-4"
  >
    <span
      aria-disabled="false"
      class="badge badge-ghost relative flex items-center gap-1 [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-hidden"
      data-active="false"
      tabindex="-1"
    >
      <span
        class="truncate max-w-24"
      >
        Hello
      </span>
      <button
        aria-label="Remove Hello option"
        aria-roledescription="button to remove option"
        class="transition-all duration-300 disabled:cursor-not-allowed [&:hover:not(:disabled)]:opacity-80"
        type="button"
      >
        <span
          class="sr-only"
        >
          Remove Hello option
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </span>
    <span
      aria-disabled="false"
      class="badge badge-ghost relative flex items-center gap-1 [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-hidden"
      data-active="false"
      tabindex="-1"
    >
      <span
        class="truncate max-w-24"
      >
        World
      </span>
      <button
        aria-label="Remove World option"
        aria-roledescription="button to remove option"
        class="transition-all duration-300 disabled:cursor-not-allowed [&:hover:not(:disabled)]:opacity-80"
        type="button"
      >
        <span
          class="sr-only"
        >
          Remove World option
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </span>
    <input
      class="input rounded-md transition-all duration-100 min-h-fit outline-0 border-none h-5 min-w-fit shadow-none flex-1 focus-visible:outline-0 focus-visible:ring-0 focus-visible:ring-offset-0 focus-visible:border-0 placeholder:text-muted-foreground px-1"
      placeholder="Enter anything"
      tabindex="0"
      value=""
    />
  </div>
</DocumentFragment>
`;
